--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -8,7 +8,9 @@
     android:layout_gravity="center"
     android:layout_margin="5dp"
     app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
+    app:cardElevation="5dp"
+    style="@style/CardTheme"
+    >
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -16,9 +18,10 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/fruits" />
+            android:src="@drawable/fruits"
+            android:adjustViewBounds="true" />
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -48,7 +51,6 @@
             android:id="@+id/price_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:textSize="24sp"
             android:text="340 000тг"
              />
@@ -56,11 +58,13 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="Алматы, Каскелен"
+            style="@style/simpleWord"
             />
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="12 февр."
+            style="@style/simpleWord"
             />
 
     </LinearLayout>
