--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,6 +12,18 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:editTextBackground">@drawable/shape_edit_text</item>
+        <item name="android:editTextBackground">@drawable/shape_edit_text_night</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorBackground">@color/black</item>
+    </style>
+    <style name="CardTheme" parent="Theme.MyApplication">
+        <item name="cardBackgroundColor">@color/colorForBlack</item>
+    </style>
+    <style name="simpleWord" parent="Theme.MyApplication">
+        <item name="android:textColor">@color/grayWhite</item>
+    </style>
+    <style name="circleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
