--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,18 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- turn black colors for icons like(battery, wifi, etc)-->
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <!-- white color for place where above toolbar-->
+        <item name="android:statusBarColor">@android:color/white</item>
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/purple_200</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
-        <item name="android:editTextBackground">@drawable/shape_edit_text</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:editTextBackground">@drawable/shape_edit_text_day</item>
+        <item name="android:colorBackground">@color/white</item>
+    </style>
+    <style name="CardTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="cardBackgroundColor">@color/colorForWhite</item>
+    </style>
+    <style name="simpleWord" parent="Theme.MyApplication">
+        <item name="android:textColor">@color/grayBlack</item>
+    </style>
+    <style name="circleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
