--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Market.MarketFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,15 +18,24 @@
 
         <ImageView
             android:id="@+id/title"
-            android:layout_width="150dp"
-            android:layout_height="75dp"
-            android:src="@drawable/logo_web_1024px_512px"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo2_512px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@+id/title"
+            app:layout_constraintTop_toTopOf="parent"
+            android:paddingTop="8dp"
+            />
 
         <EditText
             android:id="@+id/search_text"
-            android:layout_margin="8dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +44,7 @@
             android:drawableStart="@drawable/ic_baseline_search_24"
             android:hint="@string/search"
             android:inputType="text"
-            android:padding="8dp"
-            android:paddingStart="16dp"
+            android:padding="6dp"
             android:importantForAutofill="no" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -44,6 +54,5 @@
         android:layout_height="match_parent"
         android:horizontalSpacing="6dp"
         android:verticalSpacing="6dp"
-        android:numColumns="2"
-        />
+        android:numColumns="2" />
 </LinearLayout>
