--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="grayWhite">#EEEEEE</color>
+    <color name="grayWhite">#D6D6D6</color>
     <color name="grayBlack">#303030</color>
-    <color name="colorForBlack">#111111</color>
+    <color name="colorForBlack">#1C1C1C</color>
     <color name="colorForWhite">#EFEFEF</color>
 </resources>
