--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,10 +17,10 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/black</item>
         <item name="android:editTextBackground">@drawable/shape_edit_text_day</item>
-        <item name="android:colorBackground">@color/white</item>
+        <item name="android:colorBackground">#F2F4F5</item>
     </style>
     <style name="CardTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="cardBackgroundColor">@color/colorForWhite</item>
+        <item name="cardBackgroundColor">@color/white</item>
     </style>
     <style name="simpleWord" parent="Theme.MyApplication">
         <item name="android:textColor">@color/grayBlack</item>
