--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,32 +1,47 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyApplication" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- turn black colors for icons like(battery, wifi, etc)-->
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-        <!-- white color for place where above toolbar-->
-        <item name="android:statusBarColor">@android:color/white</item>
+    <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/purple_200</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="TitleLogin">
+        <item name="android:textSize">50sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:editTextBackground">@drawable/shape_edit_text_day</item>
-        <item name="android:colorBackground">#F2F4F5</item>
+        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textStyle">bold</item>
     </style>
-    <style name="CardTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="cardBackgroundColor">@color/white</item>
+    <style name="SubTitleLogin1">
+        <item name="android:textSize">19sp</item>
+        <item name="fontFamily">sans-serif-condensed-light</item>
     </style>
-    <style name="simpleWord" parent="Theme.MyApplication">
-        <item name="android:textColor">@color/grayBlack</item>
+    <style name="SubTitleLogin2">
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textStyle">bold</item>
     </style>
-    <style name="circleImageView" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50%</item>
+    <style name="Login">
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="backgroundTint">#9C1E39</item>
+    </style>
+    <style name="signUp">
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="backgroundTint">#F8F8F8</item>
+        <item name="android:textColor">#515151</item>
     </style>
 </resources>
